--- a/index.Rmd
+++ b/index.Rmd
@@ -8,4 +8,5 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-[Homework 1](hw1.html)
+### Homework 1:
+[Wasp Narrative Flowchart](hw1.html)
