--- a/index.Rmd
+++ b/index.Rmd
@@ -25,3 +25,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Homework 6: Simulating and fitting data distributions
 [simulating and fitting distributions](hw6.html)
+
+### Homework 7: Creating fake data sets to explore hypotheses
+[fake data exploration](hw7.html)
