--- a/index.Rmd
+++ b/index.Rmd
@@ -34,3 +34,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Homework 9: Organizing code with structured programming
 [structured programming](hw9.html)
+
+### Homework 10: For loops and randomization tests
+[for loops](hw10.html)
