--- a/index.Rmd
+++ b/index.Rmd
@@ -37,3 +37,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Homework 10: For loops and randomization tests
 [for loops](hw10.html)
+
+### Homework 11: Batch processing
+[batch processing](hw11.html)
+
+### Homework 12: ggplot
+[ggplot](hw12.html)
